--- a/src/sass/countries.scss
+++ b/src/sass/countries.scss
@@ -2,7 +2,9 @@
   padding: 60px;
   width: 100%;
 }
-
+ul {
+  list-style: none;
+}
 .search {
   width: 400px;
   margin-bottom: 40px;
@@ -10,4 +12,18 @@
     display: flex;
     flex-direction: column;
   }
+}
+.result__name {
+  display: flex;
+  justify-content: center;
+  h2 {
+    font-size: 3em;
+  }
+}
+.result__country {
+  display: flex;
+  justify-content: space-around;
+}
+.contry-item {
+  font-size: 20px;
 }
