--- a/src/templates/country.hbs
+++ b/src/templates/country.hbs
@@ -1,20 +1,24 @@
 {{#each this}}
-<div>
-<h2>{{name}}</h2>
-<ul>
-    <li>Capital: {{capital}}</li>
-    <li>Population: {{population}}</li>
-    <li>Languages:
+<div id='result__name'class="result__name">
+    <h2>{{name}}</h2>
+</div>
+<div class="result__country">
+    <div>
         <ul>
-            {{#each languages}}
-            <li>{{name}}</li>
-            {{/each}}
+            <li><span class="contry-item">Capital: </span> {{capital}}</li>
+            <li><span class="contry-item">Population: </span> {{population}}</li>
+            <li><span class="contry-item">Languages: </span>
+                <ul>
+                    {{#each languages}}
+                    <li>{{name}}</li>
+                    {{/each}}
+                </ul>
+            </li>
         </ul>
-    </li>
-</ul>
+    </div>
+    <div>
+        <img srcset={{flags.png}} alt={{name}} />
+    </div>
 </div>
-<div>
-    <img srcset={{flags.png}}
-        alt={{name}} />
-</div>
+
 {{/each}}
