--- a/src/templates/country.hbs
+++ b/src/templates/country.hbs
@@ -4,11 +4,11 @@
 </div>
 <div class="result__country">
     <div>
-        <ul>
+        <ul class="country-found">
             <li><span class="contry-item">Capital: </span> {{capital}}</li>
             <li><span class="contry-item">Population: </span> {{population}}</li>
             <li><span class="contry-item">Languages: </span>
-                <ul>
+                <ul class="contry-item__list">
                     {{#each languages}}
                     <li>{{name}}</li>
                     {{/each}}
