--- a/src/sass/countries.scss
+++ b/src/sass/countries.scss
@@ -2,9 +2,7 @@
   padding: 60px;
   width: 100%;
 }
-ul {
-  list-style: none;
-}
+
 .search {
   width: 400px;
   margin-bottom: 40px;
@@ -24,6 +22,10 @@ ul {
   display: flex;
   justify-content: space-around;
 }
+.country-found {
+  list-style: none;
+}
 .contry-item {
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: bold;
 }
